[package]
name = "spine-example"
version = "0.1.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
description = "Placeholder for spine workspace"
license = "MIT"
repository = "https://github.com/jaynus/spine"

[dependencies]
spine = { version = "0.1.1",  path = "../spine" }
image = "0.23"
glow = { version = "0.4", default-features=false }
smallvec = "1.2"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.22", optional = true }

[features]
default = ["window-glutin"]
web-sys = ["web_sys", "wasm-bindgen", "glow/web-sys"]
window-glutin = ["glutin", "glow/glutin"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features=["console"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }