[package]
name = "spine-sys"
version = "0.1.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
description = "Placeholder for spine workspace"
license = "MIT"
repository = "https://github.com/jaynus/spine"

[dependencies]
thiserror = "1.0"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

