[package]
name = "spine"
version = "0.1.1"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
description = "Placeholder for spine workspace"
license = "MIT"
repository = "https://github.com/jaynus/spine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spine-sys = { version = "0.1.1", path = "../spine-sys" }